- Highlight column drop area during drag.

** Boards
- Board list (sidebar) supports drag-to-reorder; top-most becomes default/current.
- On startup, opens the first board in saved order if available.

** Corrections
- Previous note claiming the delete confirmation dialog was removed was inaccurate; the dialog is present and functional now.

* 2025-09-11 — Data Portability

** Feature: JSON Import/Export
- Implemented a new "Data Management" panel in the sidebar.
- Users can now export all application data (boards, tasks, notes, intentions) into a single, human-readable JSON file. This allows for easy backups and manual editing of the data.
- Users can import a previously exported JSON file, which will overwrite the existing data in the browser and reload the application with the new state. This requires user confirmation to prevent accidental data loss.
* 2025-09-12 — Stability Fixes

** JSX Structure
- Fixed a mismatched JSX tree in KanbanBoard that caused a Vite/SWC parse error (extra closing div around the main content). Parsing and builds now succeed.

** Board Picker Resilience
- Added a safety net to repopulate the board list from localStorage when `availableBoards` is empty (e.g., after hot reloads).
- Preserves saved order from `kanban-board-order` and switches to a valid board if needed.
- No data is lost; this only refreshes the in‑memory list.

** New Page: Implementation Intentions
- Added a new "Implementation Intentions" tab and page with the same styling and icon vibe.
- Content is sourced from implementation-intentions.org and rendered into tidy sections.
- Quick switcher added under the board tabs: Board | Implementation Intentions.

** UI Polish
- Moved the Implementation Intentions view tabs to the same top row as the board picker (left side) for a cohesive layout.
- Unified selection styling: both view tabs and the board picker use white‑on‑navy for the active state (bg-blue-900 text-white), and text-blue-900 with light hover for inactive.